# banqi-conversacional

./: .env.example  .gitignore  README.md  backlog.md  docker-compose.yml  projeto.md
Solução completa para subir na AWS/: .env.example  Dockerfile  README.md  fluxo_completo.md  pyproject.toml
Solução completa para subir na AWS/domains/consignado/prompts/: consignado.md  supervisor.md
Solução completa para subir na AWS/infrastructure/terraform/: terraform.tfvars.example  variables.tf
Solução completa para subir na AWS/src/agents/: context.py
Solução completa para subir na AWS/src/gateway/: token_manager.py
Solução completa para subir na AWS/src/tools/: biometry.py  consent_term.py  proposal.py  simulation.py
Solução completa para subir na AWS/src/utils/: logging.py  pii.py  secrets.py  validation.py
Solução completa para subir na AWS/src/webhook/: agentcore_client.py  events.py  handler.py  models.py  router.py  session.py  signature.py  whatsapp_client.py
cod_poc/ciandt_it-conversational-agents-2c8392d72d36/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .trivyignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  bitbucket-pipelines.yml  docker-compose.yml  pyproject.toml
cod_poc/ciandt_it-conversational-agents-2c8392d72d36/.github/workflows/: security.yml  test.yml
cod_poc/ciandt_it-conversational-agents-2c8392d72d36/docs/: API_PAYLOADS.md  DEPLOY.md
cod_poc/ciandt_it-conversational-agents-2c8392d72d36/domains/_template/: README.md  domain.yaml
cod_poc/ciandt_it-conversational-agents-2c8392d72d36/domains/banqi-banking/: domain.yaml
cod_poc/ciandt_it-conversational-agents-2c8392d72d36/infrastructure/cdk/: app.py  cdk.json  requirements.txt
cod_poc/ciandt_it-conversational-agents-2c8392d72d36/infrastructure/cloudformation/: network.yaml  template.yaml
cod_poc/ciandt_it-conversational-agents-2c8392d72d36/infrastructure/terraform/: .terraform.lock.hcl  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
cod_poc/ciandt_it-conversational-agents-2c8392d72d36/infrastructure/whatsapp/: template.yaml
cod_poc/ciandt_it-conversational-agents-2c8392d72d36/scripts/: delete_user_data.py  setup.py  setup_guardrails.py  setup_memory.py
cod_poc/ciandt_it-conversational-agents-2c8392d72d36/src/: main.py
cod_poc/ciandt_it-conversational-agents-2c8392d72d36/src/agents/: context.py  factory.py
cod_poc/ciandt_it-conversational-agents-2c8392d72d36/src/channels/: base.py
cod_poc/ciandt_it-conversational-agents-2c8392d72d36/src/config/: settings.py
cod_poc/ciandt_it-conversational-agents-2c8392d72d36/src/domain/: loader.py  schema.py
cod_poc/ciandt_it-conversational-agents-2c8392d72d36/src/gateway/: token_manager.py
cod_poc/ciandt_it-conversational-agents-2c8392d72d36/src/memory/: setup.py
cod_poc/ciandt_it-conversational-agents-2c8392d72d36/src/utils/: agent_helpers.py  logging.py  pii.py  secrets.py  validation.py
cod_poc/ciandt_it-conversational-agents-2c8392d72d36/tests/: conftest.py
cod_poc/ciandt_it-conversational-agents-2c8392d72d36/tests/container/: test_health.sh  (+2 more)
(+164 files in other folders)
